--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "express-mongo-sanitize": "^2.0.2",
+    "helmet": "^4.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
     "morgan": "^1.10.0",
     "node-geocoder": "^3.27.0",
     "nodemailer": "^6.5.0",
-    "slugify": "^1.4.7"
+    "slugify": "^1.4.7",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
